Migrate InconsistentHeaderTitles to new dump API